[NIFI-11006] Upgraded from Junit4 to Junit5
Signed-off-by: Chris Sampson <chris.sampson82@gmail.com>

This closes #6813